--- a/i18n/es_MX.csv
+++ b/i18n/es_MX.csv
@@ -45,3 +45,4 @@
 "We're sorry, your payment has been already processed.","Su pago ya ha sido procesado pero se ha producido un error al guardar su pedido. Por favor contáctenos para procesar su pedido y evitar pagos duplicados. Si quiere realizar otra compra con otro metodo de pago, intente eliminar sus cookies y comience de nuevo su proceso de compra."
 "Verify your shipping address.","Por favor espcifique o valide su dirección de pago."
 "Please specify an e-mail address and try again","Por favor especifique una dirección de e-mail e inténtelo de nuevo."
+"This payment method is currently unavailable.","Lo sentimos, por el momento este método de pago no está disponible. Inténtelo de nuevo más tarde."
