--- a/i18n/es_MX.csv
+++ b/i18n/es_MX.csv
@@ -47,3 +47,4 @@
 "Please specify an e-mail address and try again","Por favor especifique una dirección de e-mail e inténtelo de nuevo."
 "This payment method is currently unavailable.","Lo sentimos, por el momento este método de pago no está disponible. Inténtelo de nuevo más tarde."
 "In order to use this payment method, please select it and add a Billing Address.","Para utilizar este método de pago, selecciónelo y agregue una dirección de facturación."
+"Merchant Account E-Mail", "E-Mail del comercio"
